<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="txtPeso">Peso em kg</string>
    <string name="txtAltura">Altura em m</string>
    <string name="btnCalcula">Calcular</string>
    <string name="swtM">Masculino</string>
    <string name="swtF">Feminino</string>
    <string name="swtSexo">Sexo</string>
    <string name="txtTitulo">Calculo do IMC</string>
    <string name="ab_normal">Abaixo do Normal</string>
    <string name="normal">Normal</string>
    <string name="o_leve">Obesidade Leve</string>
    <string name="o_moder">Obesidade Moderada</string>
    <string name="o_morb">Obesidade Mórbida</string>
    <string name="msgVazio">Informe os valores</string>
    <string name="msgErro">Informações incorretas</string>
    <string name="clean">"Limpar "</string>
</resources>
