<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/AppIMC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            style="@style/AppIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:text="@string/txtTitulo"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPeso"
            style="@style/AppIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:ems="10"
            android:hint="@string/txtPeso"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtAltura"
            style="@style/AppIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtAltura"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <ToggleButton
            android:id="@+id/swtSexo"
            style="@style/AppIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:color/holo_blue_light"
            android:checked="false"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal|center_vertical"
            android:singleLine="true"
            android:text="@string/swtSexo"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textOff="@string/swtM"
            android:textOn="@string/swtF"
            android:textSize="18sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnCalc"
            style="@style/AppIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Calcular"
            android:text="@string/btnCalcula" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/clean"
            android:onClick="limpar"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/clean" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>